# llm_patch_driver

./: README.md  exp.py  pyproject.toml
.cursor/rules/: debugging.mdc  dependencies.mdc
src/llm_patch_driver/: __init__.py  config.py  logging.py  tests.py
src/llm_patch_driver/driver/: annotation_helpers.py  driver.py  prompts.py  sentencizer.py
src/llm_patch_driver/llm/: __init__.py  api_schemas.py  base_adapter.py  llm_client.py  maps.py  openai_adapters.py  schemas.py  types.py  wrapper.py
src/llm_patch_driver/patch/: __init__.py  base_patch.py
src/llm_patch_driver/patch/json/: json_patch.py  prompts.py
src/llm_patch_driver/patch/string/: string_patch.py
src/llm_patch_driver/patch_schemas/: base_patch.py  json_patch.py  string_patch.py
src/llm_patch_driver/patch_target/: prompts.py  target.py
src/llm_patch_driver/tools/: __init__.py  tool_call_schemas.py  tools.py
tests/: test_json_patch.py  test_patch_driver.py  test_patch_target.py  test_string_patch.py
tests/end_to_end/: test_json.py  test_string_assets.py
tests/integration/openai_e2e/: debugging.py  test_json.py  test_json_assets.py  test_string.py  test_string_assets.py
tests/unit/: test_annotation_helpers.py  test_json_patch.py  test_logging.py  test_patch_driver.py  test_patch_target.py  test_string_patch.py
